Correct namespacing for BEM
Refactor a few class names that did not have a namespace.

--- a/_sass/_06-components.about-page.scss
+++ b/_sass/_06-components.about-page.scss
@@ -1,8 +1,8 @@
-.about__title {
+.c-about__title {
   @include ms-respond(font-size, 4);
   @include text-gradient(0deg, $primary, $alternate);
 }
 
-.about__image {
+.c-about__image {
   @include ms-respond(padding-top, 3);
 }
