--- a/_sass/_06-components.portfolio.scss
+++ b/_sass/_06-components.portfolio.scss
@@ -1,3 +1,9 @@
+.c-portfolio__title {
+  display: inline-block;
+  @include ms-respond(font-size, 4);
+  @include text-gradient(0deg, $primary, $alternate);
+}
+
 .c-portfolio__item {
   margin: 0;
 }
